# screencast-narrator

./: .gitignore  CLAUDE.md  Makefile  README.md  jitpack.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
api/common/: config-schema.json  config.json  qr-payload-schema.json  storyboard-schema.json  timeline-schema.json
api/common/js/: highlight-draw.js  highlight-remove.js  highlight-scroll-wait.js  highlight-scroll.js  sync-inject.js  sync-remove.js
api/java-client/: pom.xml
api/java-client/src/main/java/screencastnarrator/: CdpVideoRecorder.java  Highlight.java  HighlightStyles.java  MarkerPosition.java  SharedConfig.java  Storyboard.java  SyncFrames.java  SyncType.java
api/java-client/src/test/java/screencastnarrator/: StoryboardTest.java  SyncFramesTest.java
api/java-client/src/test/resources/common/: config.json
api/python-client/: pyproject.toml
api/python-client/src/screencast_narrator_client/: __init__.py  cdp_video_recorder.py  highlight.py  shared_config.py  storyboard.py  sync_frames.py
api/python-client/tests/: test_sync_frames.py
api/typescript-client/: package.json
api/typescript-client/src/: cdp-video-recorder.ts  index.ts
api/typescript-client/tests/: storyboard.test.ts  sync-frames.test.ts
docs/: api.md
examples/: RecordHighlightTest.java  RecordWikipediaSearch.java  pom.xml  record_highlight_test.py  record_highlight_test.ts  record_wikipedia_search.py  record_wikipedia_search.ts
scripts/quality/: conventions.py
src/screencast_narrator/: __init__.py  debug_overlay.py  highlight.py  merge.py  narration_segment.py  shared_config.py  storyboard.py  sync_detect.py  sync_frames.py  timeline_html.py
tests/: test_debug_overlay.py  test_debug_overlay_e2e.py  test_e2e_search_screencast.py  test_google_docs_sync_frames.py  test_highlight_e2e.py  test_long_running_drift.py  test_merge_integration.py  test_qr_roundtrip.py  test_schema_validation.py  test_silent_narration_e2e.py  test_storyboard.py  test_subtitles.py  test_sync_detect.py  test_sync_pipeline.py
