[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "screencast-narrator-client"
version = "0.2.1"
description = "Python client for screencast-narrator: record narrated screencasts from browser automation"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Martin Marinschek" },
]
dependencies = [
    "qrcode>=7.4",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.9",
]

[tool.setuptools.packages.find]
where = ["src"]
